Get Friend List

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
         transitive = true;
     }
     compile files('libs/imageloader.jar')
+    compile files('libs/twitter4j-core-4.0.4.jar')
 }
